# quinary_birch

./: .gitignore  README.md  configure.ac
.github/workflows/: c-cpp.yml
flint/: flint-config.h  flint.h  fmpq.h
libs/: libantic.so.0.2.4  libbliss.so.0.73  libmpfr.so.6  libnauty.so.1.0.0
old/: Field.h  Field.h~  Integer.h  Integer.h~  Integer.inl  Integer.inl~  NumberField.h  Polynomial.h  Rational.h  Rational.inl  Ring.h  Ring.h~
src/: #Fp.inl#  .#birch.h  BirchExample.h  BirchExample.inl  Eigenvector.h  Eigenvector.inl  EuclideanDomain.h  EuclideanDomain.h~  EuclideanDomain.inl  EuclideanDomain.inl~  EuclideanDomainElement.h  EuclideanDomainElement.inl  Field.h  Field.h~  Field.inl  FieldElement.h  FieldElement.inl  Fp.cpp  Fp.h  Fp.inl  FpElement.h  FpElement.inl  Genus.h  Genus.inl  HashMap.h  Integer.cpp  Integer.h  Integer.inl  IntegerRing.h  Isometry.h  Isometry.inl  Makefile.am  Matrix.h  Matrix.inl  MatrixRing.h  NeighborManager.h  NeighborManager.inl  NumberField.h  NumberField.inl  NumberFieldElement.h  (+55 more)
src/bliss/: graph.hh
src/carat/: config.h.in
src/flint/: flint-config.h  flint.h  fmpq.h
src/permlib/: bsgs.h  permutation.h
src/permlib/change/: base_transpose.h
src/permlib/generator/: schreier_generator.h
src/permlib/test/: primitivity_sgs_test.h
src/polyhedral_common/src_basic/: Basic_file.cpp  Basic_file.h  Basic_string.cpp  Basic_string.h  ExceptionEnding.cpp  ExceptionEnding.h  Temp_common.cpp  Temp_common.h  TypeConversion.cpp  TypeConversion.cpp~  TypeConversion.h  hash_functions.cpp  hash_functions.h  libbirch_la-Basic_file.lo  libbirch_la-Basic_string.lo  libbirch_la-ExceptionEnding.lo  libbirch_la-Temp_common.lo  libbirch_la-TypeConversion.lo  libbirch_la-hash_functions.lo
src/polyhedral_common/src_basic/.deps/: birch-Basic_file.Po  birch-Basic_string.Po  birch-ExceptionEnding.Po  birch-Temp_common.Po  birch-TypeConversion.Po  birch-hash_functions.Po  birch_dbg-Basic_file.Po  birch_dbg-Basic_string.Po  birch_dbg-ExceptionEnding.Po  birch_dbg-Temp_common.Po  birch_dbg-TypeConversion.Po  birch_dbg-hash_functions.Po  libbirch_la-Basic_file.Plo  libbirch_la-Basic_string.Plo  libbirch_la-ExceptionEnding.Plo  libbirch_la-Temp_common.Plo  libbirch_la-TypeConversion.Plo  libbirch_la-hash_functions.Plo
src/polyhedral_common/src_comb/: Boost_bitset.cpp  Boost_bitset.h  COMB_Combinatorics.cpp  COMB_Combinatorics.h  COMB_Combinatorics_elem.cpp  COMB_Combinatorics_elem.h  COMB_Stor.cpp  COMB_Stor.h  EnumerationCliques_ordered_enum.cpp  libbirch_la-Boost_bitset.lo  libbirch_la-COMB_Combinatorics.lo  libbirch_la-COMB_Combinatorics_elem.lo  libbirch_la-COMB_Stor.lo
src/polyhedral_common/src_comb/.deps/: birch-Boost_bitset.Po  birch-COMB_Combinatorics.Po  birch-COMB_Combinatorics_elem.Po  birch-COMB_Stor.Po  birch_dbg-Boost_bitset.Po  birch_dbg-COMB_Combinatorics.Po  birch_dbg-COMB_Combinatorics_elem.Po  birch_dbg-COMB_Stor.Po  libbirch_la-Boost_bitset.Plo  libbirch_la-COMB_Combinatorics.Plo  libbirch_la-COMB_Combinatorics_elem.Plo  libbirch_la-COMB_Stor.Plo
src/polyhedral_common/src_gap/: GapPrint.h  StabChain.h  plus_infinity.h
src/polyhedral_common/src_graph/: GRAPH_BitsetType.h  GRAPH_GraphicalBasic.h  GRAPH_GraphicalFunctions.cpp  GRAPH_GraphicalFunctions.h  GRAPH_bliss.cpp  GRAPH_bliss.h  GRAPH_traces.h  libbirch_la-GRAPH_GraphicalFunctions.lo  libbirch_la-GRAPH_bliss.lo
src/polyhedral_common/src_graph/.deps/: birch-GRAPH_GraphicalFunctions.Po  birch-GRAPH_bliss.Po  birch_dbg-GRAPH_GraphicalFunctions.Po  birch_dbg-GRAPH_bliss.Po  libbirch_la-GRAPH_GraphicalFunctions.Plo  libbirch_la-GRAPH_bliss.Plo
src/polyhedral_common/src_latt/: CVP_NiemeierAlgo.h  LatticeDefinitions.h  MatrixCanonicalForm.h  Shvec_double.h  Shvec_exact.h  Temp_Positivity.h  Temp_Tspace_General.h
src/polyhedral_common/src_matrix/: MAT_Matrix.h  MAT_MatrixInt.cpp  MAT_MatrixInt.h  libbirch_la-MAT_MatrixInt.lo
src/polyhedral_common/src_matrix/.deps/: birch-MAT_MatrixInt.Po  birch_dbg-MAT_MatrixInt.Po  libbirch_la-MAT_MatrixInt.Plo
src/polyhedral_common/src_number/: NumberTheory.cpp  NumberTheory.cpp~  NumberTheory.h  factorizations.cpp  factorizations.h  libbirch_la-NumberTheory.lo  libbirch_la-factorizations.lo
src/polyhedral_common/src_number/.deps/: birch-NumberTheory.Po  birch-factorizations.Po  birch_dbg-NumberTheory.Po  birch_dbg-factorizations.Po  libbirch_la-NumberTheory.Plo  libbirch_la-factorizations.Plo
src/polyhedral_common/src_poly/: ComputeDelaunay  GRP_ComputeAut_ListMat_Subset_EXT  GRP_ComputeAut_ListMat_Subset_EXT.cpp  GRP_GroupFct.h  GRP_Invariant_ListMat_Subset_EXT  GRP_OrbitSplitting  GRP_TestEquivalenceSets  GRP_TestEquivalence_ListMat_Subset_EXT  GRP_VectorSplitting  Makefile_cdd  MatrixGroup.h  POLY_ComputeEngelSymbol  POLY_CreateAffineBasis  POLY_FaceLatticeDirect  POLY_IntegralPoints  POLY_LinPolytope_Automorphism  POLY_LinearDetermineByInequalities  POLY_LinearProgram  POLY_PolytopeFct.cpp  POLY_PolytopeFct.h  POLY_ThreadedADM  POLY_lcdd  POLY_lp_cdd  POLY_lrs  POLY_lrs_set  POLY_lrs_set_reduction  POLY_redundancy  POLY_redundancyClarkson  POLY_redundancyClarkson.cpp  POLY_redundancyClarksonBlocks  Permlib_specific.cpp  Permlib_specific.h  Temp_PolytopeEquiStab.cpp  Temp_PolytopeEquiStab.h  Temp_StandaloneOrbitFacePolytopeLP  libbirch_la-Permlib_specific.lo  libbirch_la-Temp_PolytopeEquiStab.lo
src/polyhedral_common/src_poly/.deps/: birch-Permlib_specific.Po  birch-Temp_PolytopeEquiStab.Po  birch_dbg-Permlib_specific.Po  birch_dbg-Temp_PolytopeEquiStab.Po  libbirch_la-Permlib_specific.Plo  libbirch_la-Temp_PolytopeEquiStab.Plo
